--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -12,6 +12,8 @@
 @import 'components/modal';
 @import 'components/buttons';
 @import 'components/toast';
+@import 'components/dropdown';
+@import 'components/breadcrumbs';
 
 @import 'pages/home/intro';
 
