mock bg removed

--- a/src/sass/pages/home/_intro.scss
+++ b/src/sass/pages/home/_intro.scss
@@ -3,7 +3,7 @@
 @import 'node_modules/bootstrap/scss/vendor/rfs';
 
 .page--home {
-	@include background('../img/background.jpg');
+	background-color: get($colors, dark);
 	a, button {
 		@include transition(color);
 		&:hover {
