--- a/src/pug/pages/home.pug
+++ b/src/pug/pages/home.pug
@@ -50,12 +50,11 @@ block mainContent
 									bsTarget: '#js-example-modal',
 								})
 
-
 					.col-3.d-none.d-xl-block
 						.ratio.ratio-1x1
 							+lazyImage({
-								imageSrc: 'img/v8.png',
-								type: 'img',
+								imageSrc: 'img/v8',
+								type: 'background',
 								classes: 'w-100 h-100',
 								imageClasses: 'w-100 h-100'
 							})
