scss directory utilities renamed and some folder structure optimization

--- a/src/scss/base/_reboot.scss
+++ b/src/scss/base/_reboot.scss
@@ -1,4 +1,4 @@
-@import '../utilites/variables';
+@import '../utilities/variables';
 @import 'node_modules/bootstrap/scss/vendor/rfs';
 @import 'node_modules/bootstrap/scss/functions';
 @import 'node_modules/bootstrap/scss/variables';
