--- a/src/scss/components/form/_field.scss
+++ b/src/scss/components/form/_field.scss
@@ -1,5 +1,5 @@
-@import '../../utilites/variables';
-@import '../../utilites/mixins';
+@import '../../utilities/variables';
+@import '../../utilities/mixins';
 @import 'node_modules/bootstrap/scss/vendor/rfs';
 
 $field-dropdown-icon-size:  rem(14px);
