--- a/src/scss/components/_breadcrumbs.scss
+++ b/src/scss/components/_breadcrumbs.scss
@@ -1,4 +1,4 @@
-@import '../utilites/variables';
+@import '../utilities/variables';
 @import 'node_modules/bootstrap/scss/mixins/breakpoints';
 
 .breadcrumbs {
