--- a/src/scss/components/_lazy.scss
+++ b/src/scss/components/_lazy.scss
@@ -1,5 +1,5 @@
-@import '../utilites/mixins';
-@import '../utilites/variables';
+@import '../utilities/mixins';
+@import '../utilities/variables';
 @import 'node_modules/bootstrap/scss/vendor/rfs';
 
 .ratio {
