--- a/src/scss/components/form/_radio-and-checkbox.scss
+++ b/src/scss/components/form/_radio-and-checkbox.scss
@@ -1,5 +1,5 @@
-@import '../../utilites/variables';
-@import '../../utilites/mixins';
+@import '../../utilities/variables';
+@import '../../utilities/mixins';
 
 $radio-size:        16px;
 $checkbox-size:     16px;
