--- a/src/scss/components/form/_validation.scss
+++ b/src/scss/components/form/_validation.scss
@@ -1,5 +1,5 @@
-@import '../../utilites/variables';
-@import '../../utilites/mixins';
+@import '../../utilities/variables';
+@import '../../utilities/mixins';
 
 .form__group {
 	position: relative;
