--- a/src/scss/libs.scss
+++ b/src/scss/libs.scss
@@ -1,5 +1,5 @@
-@import 'utilites/variables';
-@import 'utilites/fonts';
+@import 'utilities/variables';
+@import 'utilities/fonts';
 
 @import 'node_modules/bootstrap/scss/functions';
 @import 'node_modules/bootstrap/scss/variables';
